Correct z-index on seriesViewer when hidden, does not have hoverable hitbox on browse

--- a/app/assets/stylesheets/browse.scss
+++ b/app/assets/stylesheets/browse.scss
@@ -32,3 +32,10 @@
   width: 90%;
   margin-bottom: 1.2vw;
 }
+
+.browser main {
+  margin-left: 54px;
+  width: 93%;
+  display: flex;
+  flex-wrap: wrap;
+}
