--- a/app/assets/stylesheets/series_row.scss
+++ b/app/assets/stylesheets/series_row.scss
@@ -88,6 +88,7 @@
   margin-left: -54px;
   opacity: 0;
   transition: all 0ms ease;
+  z-index: -100;
 }
 
 .viewerShow {
